# mauth-studio

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs
apps/api/: pyproject.toml
apps/api/app/: bootstrap.py  main.py  standalone.py
apps/api/app/api/: agent.py  assistant.py  diagram.py  format.py  questions.py  storage.py  system.py  tests.py
apps/api/app/models/: schemas.py
apps/api/app/services/: ai.py  calculus.py  matrices.py  openai_assistant.py  penrose.py  storage.py  types.py
apps/api/tests/: test_agent_bridge.py  test_assistant_api.py  test_cors.py  test_diagram_penrose.py  test_file_storage.py  test_formatting_engine.py  test_math_endpoints.py  test_question_generation.py  test_standalone.py  test_system_status.py
chats/: Authoring.md  Development.md  README.md
configs/: assistant-real-exam-benchmarks.json
desktop/: agent-connector.mjs  agent-connector.test.mjs  development-runtime.mjs  development-runtime.test.mjs  document-open.mjs  document-open.test.mjs  main.mjs  preload.cjs  runtime.mjs  runtime.test.mjs  updater.mjs  updater.test.mjs
docs/: agent-bridge.md  agent-docs.md  agent-local-setup.md  ai-brains.md  ai-chatbox-readiness.md  app-scan-and-direction.md  architecture.md  current-state.md  index.html  local-ai-workflow.md  macos-release.md  mauth-actions.md  mauthdown.md  penrose-cheatsheet.md  storage.md  todo.md
math-app/: AGENTS.md  README.md  pnpm-workspace.yaml
mauth-workbench/: README.md
(+544 files in other folders)
