[project]
name = "mauth-studio-api"
version = "0.1.0"
description = "FastAPI backend for Mauth Studio, a rule-driven high-school mathematics authoring platform."
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.11,<4.12",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "pillow>=12.2.0",
    "pydantic>=2.8.0",
    "pytest>=8.0.0",
    "scipy>=1.13.0",
    "sympy>=1.13.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app",
    "../../packages/question-engine",
    "../../packages/formatting-engine",
    "../../packages/marking-engine"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "storage",
    "tmp",
    "drafts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
